Bug 300985 - okular does not restore the session
Summary: okular does not restore the session
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.14.80
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-01 08:26 UTC by Alin M Elena
Modified: 2012-06-04 23:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch (675 bytes, text/plain)
2012-06-01 21:20 UTC, Fabio D'Urso
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2012-06-01 08:26:54 UTC
I usually keep few documents open in okular... and I use kde's restore session.
after the last update (kde trunk... something very close to 4.9b) okular gets restored only partially.
the number of instances of okular restored is correct but no documents are restored... so I end up with few empty okulars.

Alin

Reproducible: Always
Comment 1 Fabio D'Urso 2012-06-01 21:20:31 UTC
Created attachment 71504 [details]
Patch

The bug comes from e3f1c388de409843150280a2e1b3a738ab982af6 (transition to ReadWritePart).

I'm attaching the fix: Do not close the document in Shell::queryClose()
Because if we do, Shell::saveProperties will find it closed and won't save the session correctly.

@ Albert: I'm putting it in my commit queue for next week
Comment 2 Fabio D'Urso 2012-06-04 23:13:33 UTC
Git commit ac695d448db95d2e31ba1c3469694e2a576185b4 by Fabio D'Urso.
Committed on 01/06/2012 at 22:55.
Pushed by fabiod into branch 'master'.

Do not close the document in Shell::queryClose()

Because if we do, Shell::saveProperties will find it closed and won't
save the session correctly.

M  +1    -1    part.cpp
M  +1    -1    shell/shell.cpp

http://commits.kde.org/okular/ac695d448db95d2e31ba1c3469694e2a576185b4