Do not close the document in Shell::queryClose()

Because if we do, Shell::saveProperties will find it closed and won't
save the session correctly.

BUG: 300985